--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#ffffffff</color>
+    <color name="black">#ff000000</color>
+    <color name="holo_background_dark">#ff282828</color>
+    <color name="holo_background_light">#ffeeeeee</color>
+    <color name="separator_dark">#ff333333</color>
+     <color name="separator_light">#ffdddddd</color>
+    
     <!-- A light Holo shade of blue -->
     <color name="holo_blue_light">#ff33b5e5</color>
     <!-- A light Holo shade of green -->
